# ESP32-Wi-Fi-Websocket-Controller

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  config.h  display.c  display.h  game.c  game.h  main.c  network.c  network.h
spiffs_image/: index.html
src/: config.h  display.cpp  display.h  game.cpp  game.h  main.cpp  network.cpp  network.h
